force-app/main/default/objects/Fifth_Lesson__c/Fifth_Lesson__c.object-meta.xml
<CustomObject>
    <label>Fifth Lesson</label>
    <nameField>
        <displayFormat>FL-{00000}</displayFormat>
        <label>Fifth Lesson Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fifth Lessons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>