force-app/main/default/objects/Fifth_Lesson__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows the reference of the booking</description>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Fifth Lessons</relationshipLabel>
    <relationshipName>Fifth_Lessons</relationshipName>
    <type>Lookup</type>
</CustomField>