force-app/main/default/objects/Fifth_Lesson__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <description>This field stores booking date of fifth lesson</description>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>