force-app/main/default/objects/Fifth_Lesson__c/fields/Booking_Day__c.field-meta.xml
<CustomField>
    <fullName>Booking_Day__c</fullName>
    <formula>CASE(WEEKDAY( Booking_Date__c), 1, &quot;Sunday&quot;,2,&quot;Monday&quot;,3 ,&quot;Tuesday&quot;,4,&quot;Wednesday&quot;,5,&quot;Thursday&quot;,6,&quot;Friday&quot;,7,&quot;Saturday&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Day</label>
    <type>Text</type>
</CustomField>