force-app/main/default/objects/Fifth_Lesson__c/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <description>Managed by WorkFlow</description>
    <label>Booking Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>