force-app/main/default/objects/Fifth_Lesson__c/fields/Booking_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type_Formula__c</fullName>
    <description>Form related Booking</description>
    <formula>TEXT(  Booking__r.Type__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Type</label>
    <type>Text</type>
</CustomField>