force-app/main/default/objects/Fifth_Lesson__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this is lookup of account</description>
    <label>Center Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fifth Lessons</relationshipLabel>
    <relationshipName>Fifth_Lessons</relationshipName>
    <type>Lookup</type>
</CustomField>