force-app/main/default/objects/Fifth_Lesson__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>it will  stores the time duration of fifth lesson</description>
    <formula>(End_Time__c - Start_Time__c )/(60*1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>