force-app/main/default/objects/Fifth_Lesson__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>this field stores the ending time of fifth lesson</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>