force-app/main/default/objects/Fifth_Lesson__c/fields/Enrolment__c.field-meta.xml
<CustomField>
    <fullName>Enrolment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It will store enrolment for the booking</description>
    <label>Enrolment</label>
    <referenceTo>Enrolment__c</referenceTo>
    <relationshipLabel>Fifth Lessons</relationshipLabel>
    <relationshipName>Fifth_Lessons</relationshipName>
    <type>Lookup</type>
</CustomField>