force-app/main/default/objects/Fifth_Lesson__c/fields/Event_Color__c.field-meta.xml
<CustomField>
    <fullName>Event_Color__c</fullName>
    <formula>&apos;white&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Color</label>
    <type>Text</type>
</CustomField>