force-app/main/default/objects/Fifth_Lesson__c/fields/Field_1__c.field-meta.xml
<CustomField>
    <fullName>Field_1__c</fullName>
    <label>Field 1</label>
    <type>TextArea</type>
</CustomField>