force-app/main/default/objects/Fifth_Lesson__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will helps to describe that This Fifth lesson is active or not to show on calendar.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>