force-app/main/default/objects/Fifth_Lesson__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>it is lookup of package</description>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Fifth Lessons</relationshipLabel>
    <relationshipName>Fifth_Lessons</relationshipName>
    <type>Lookup</type>
</CustomField>