force-app/main/default/objects/Fifth_Lesson__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this is lookup field of account</description>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fifth Lessons (Parent)</relationshipLabel>
    <relationshipName>Fifth_Lessons1</relationshipName>
    <type>Lookup</type>
</CustomField>