force-app/main/default/objects/Fifth_Lesson__c/fields/Parent_Email__c.field-meta.xml
<CustomField>
    <fullName>Parent_Email__c</fullName>
    <description>Managed by Workflow
Used in Email notification WF</description>
    <label>Parent Email</label>
    <type>Email</type>
</CustomField>