force-app/main/default/objects/Fifth_Lesson__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>This fields holds starting time of fifth lesson</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>