force-app/main/default/objects/Fifth_Lesson__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this is lookup of account</description>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fifth Lessons (Student)</relationshipLabel>
    <relationshipName>Fifth_Lessons2</relationshipName>
    <type>Lookup</type>
</CustomField>