force-app/main/default/objects/Fifth_Lesson__c/fields/Teacher_Account__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fifth Lessons (Teacher)</relationshipLabel>
    <relationshipName>Fifth_Lessons3</relationshipName>
    <type>Lookup</type>
</CustomField>