force-app/main/default/objects/Fifth_Lesson__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_Date__c</columns>
    <columns>Parent__c</columns>
    <columns>Student__c</columns>
    <columns>Teacher_Account__c</columns>
    <columns>Center__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>